# libcrails-router

./: CMakeLists.txt  README.md  manifest  repositories.manifest
libcrails-router/: buildfile
libcrails-router/crails/: router_base.hpp
tests/basics/: buildfile  driver.cpp
